# desempregado-bot

./: .gitignore  package-lock.json  package.json
api/: Cargo.toml
api/src/: main.rs
api/src/pages/: indeed.rs  mod.rs
src/: bot.js  index.js
src/bot_commands/: messageMenu.js  message_back.js  message_go.js
src/functions/: scrapRequest.js  sendEmail.js
src/middleware/: messageTreatment.js
src/pages/: catho.js  indeed.js  linkedin.js  vagas.js
