[package]
name = "api"
version = "0.1.0"
authors = ["guilhermeSmartins <mineg4500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = ""
tokio = { version = "", features = ["full"] }
mini-redis = ""
color-eyre = ""
